# notispf

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: release.yml
notispf/: __main__.py  _qt_main.py  app.py  app_qt.py  buffer.py  display.py  display_qt.py  find_change.py  prefix.py  syntax.py
notispf/commands/: __init__.py  block_cmds.py  exclude_cmds.py  line_cmds.py  overlay_cmds.py  registry.py
packaging/: PKGBUILD  notispf-qt.desktop  windows-installer.iss
scripts/: make_icon.py  make_icons.py
tests/: test_buffer.py  test_exclude.py  test_find_change.py  test_line_cmds.py  test_overlay.py  test_prefix.py
