[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "notispf"
version = "1.0.0"
description = "A terminal text editor inspired by the ISPF editor from z/OS"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []

[project.scripts]
notispf = "notispf.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["notispf"]
